fix: popup style -> incase the url is too long

--- a/src/pages/Popup/index.css
+++ b/src/pages/Popup/index.css
@@ -2,6 +2,7 @@ body {
   background: #282c34;
   color: #ccc;
   margin: 0;
+  width: max-content;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
